# sc-tpcrs

./: .env.example  .gitignore  DOCKER_NETWORK_FIX.md  Makefile  README.md  SECURITY.md  docker-build-retry.sh  docker-compose.yml  docker-daemon-config.json
.github/workflows/: ci.yml
frontend/: Dockerfile.dev  index.html  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/api/: auth.ts  client.ts  risk.ts  vendors.ts
frontend/src/auth/: AuthContext.tsx  RequireAuth.tsx  RoleGate.tsx
frontend/src/components/: NavBar.tsx  Sidebar.tsx  TierBreakdownChart.tsx  VendorTierBadge.tsx  VrsDistributionChart.tsx  VrsGauge.tsx
frontend/src/lib/: tierColors.ts
frontend/src/routes/: DashboardLayout.tsx  LoginPage.tsx  RiskDashboardPage.tsx  VendorDetailPage.tsx  VendorListPage.tsx  VendorOnboardingWizard.tsx
frontend/src/styles/: theme.css
frontend/src/types/: auth.ts  risk.ts  vendor.ts
infrastructure/docker/: python-service.Dockerfile
infrastructure/neo4j/: init-constraints.cypher
infrastructure/postgres/: init-databases.sh
seed/: Dockerfile  README.md  auth.py  config.py  seed_all.py  tech_stack.py  users.py  vendor_templates.py  vendors.py
services/auth-service/: Dockerfile  pyproject.toml
services/auth-service/alembic/: env.py
services/auth-service/alembic/versions/: 0001_initial.py
services/auth-service/app/: config.py  demo_users.py  main.py  models.py  schemas.py  security.py
services/auth-service/app/routers/: auth.py  health.py
services/auth-service/app/services/: audit.py
services/auth-service/tests/: conftest.py  test_auth_api.py  test_jwt_flow.py
services/compliance-service/: Dockerfile  pyproject.toml
services/compliance-service/app/: config.py  db.py  main.py
services/compliance-service/app/routers/: health.py
services/compliance-service/tests/: test_health.py
services/gateway/: Dockerfile  pyproject.toml
services/gateway/app/: auth_middleware.py  config.py  health.py  main.py  proxy.py  rate_limit.py  routing.py
services/gateway/tests/: conftest.py  test_auth_middleware.py  test_cors.py  test_gateway_routes.py  test_rate_limit.py  test_routing.py
services/incident-service/: Dockerfile  pyproject.toml
services/incident-service/app/: config.py  main.py
services/incident-service/app/routers/: health.py
services/incident-service/tests/: test_health.py
services/monitoring-service/: Dockerfile  pyproject.toml
services/monitoring-service/app/: config.py  main.py
services/monitoring-service/app/routers/: health.py
services/monitoring-service/tests/: test_health.py
services/risk-service/: Dockerfile  pyproject.toml
services/risk-service/alembic/versions/: 0001_initial.py
services/risk-service/app/: config.py  db.py  main.py  models.py  schemas.py
services/risk-service/app/ml/: README.md  metrics.json  model.pkl
services/risk-service/app/routers/: dashboard.py  health.py  internal.py  risk.py
services/risk-service/app/services/: dashboard.py  events.py  internal_auth.py  vrs_calculator.py
services/risk-service/app/services/anomaly/: features.py  model.py  train.py
services/risk-service/app/services/category_sources/: breach_history_source.py  compliance_source.py  external_posture_source.py  questionnaire_source.py  threat_intel_source.py  vulnerability_source.py
services/risk-service/tests/: conftest.py  test_anomaly_model.py  test_category_sources.py  test_internal_api.py  test_risk_api.py  test_vrs_calculator.py
services/sbom-service/: Dockerfile  pyproject.toml
services/sbom-service/app/: config.py  db.py  main.py
services/sbom-service/app/routers/: health.py
services/sbom-service/tests/: test_health.py
services/vendor-service/: Dockerfile  pyproject.toml
services/vendor-service/alembic/versions/: 0001_initial.py
services/vendor-service/app/: config.py  main.py  models.py  schemas.py
services/vendor-service/app/routers/: documents.py  health.py  questionnaires.py  vendors.py
services/vendor-service/app/services/: audit.py  events.py  question_bank.py  state_machine.py  tiering.py
services/vendor-service/app/storage/: local_file_store.py
services/vendor-service/tests/: conftest.py  test_question_bank.py  test_state_machine.py  test_tiering.py  test_vendors_api.py
shared/py-common/: pyproject.toml
shared/py-common/sc_tpcrs_common/: __init__.py  audit_log.py  db_types.py  jwt_shared.py  kafka_base.py  kafka_topics.py  redis_cache.py
shared/py-common/sc_tpcrs_common/adapters/: abuseipdb_adapter.py  base.py  kev_adapter.py  misp_adapter.py  nvd_adapter.py  planted.py  registry.py  shodan_adapter.py
shared/py-common/tests/: test_audit_log.py  test_registry.py
