[project]
name = "auth-service"
version = "0.1.0"
description = "SC-TPCRS auth-service: login, MFA, JWT issuance."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt<4.1.0",
    "pyotp>=2.9.0",
    "cryptography>=42.0.0",
    "pydantic-settings>=2.2.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0", "httpx>=0.27.0", "aiosqlite>=0.20.0"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
