[project]
name = "risk-service"
version = "0.1.0"
description = "SC-TPCRS risk-service: composite Vendor Risk Score (VRS) engine and anomaly detection."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pydantic-settings>=2.2.0",
    "httpx>=0.27.0",
    "scikit-learn>=1.5.0",
    "xgboost>=2.1.0",
    "joblib>=1.4.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "aiosqlite>=0.20.0",
    "respx>=0.21.0",
    "fakeredis",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.setuptools.package-data]
app = ["ml/*.pkl", "ml/*.json"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
