[project]
name = "vendor-service"
version = "0.1.0"
description = "SC-TPCRS vendor-service: vendor registry, risk tiering, onboarding workflow, questionnaires, documents."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pydantic-settings>=2.2.0",
    "python-multipart>=0.0.9",
    "aiofiles>=23.2.0",
    "email-validator>=2.1.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0", "httpx>=0.27.0", "aiosqlite>=0.20.0"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
