[project]
name = "sc-tpcrs-common"
version = "0.1.0"
description = "Shared library for SC-TPCRS microservices: JWT verification, Kafka topics, external adapter contracts, audit logging, Redis caching."
requires-python = ">=3.11"
dependencies = [
    "pyjwt>=2.8.0",
    "redis>=5.0.0",
    "aiokafka>=0.10.0",
    "httpx>=0.27.0",
    "pydantic>=2.6.0",
    "faker>=24.0.0",
    "fastapi>=0.111.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["sc_tpcrs_common*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
